feat: update note

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css">
   <script src="https://cdn.jsdelivr.net/npm/docsify-updated/src/time-updater.js"></script>
+
   
 </head>
 <body>
@@ -18,7 +19,9 @@
 		name: 'Leo&#39;s Technical Debt',
 		repo: 'https://e23882.github.io/',
 		loadSidebar: true,
+		subMaxLevel:2,
 		search: 'auto',
+		coverpage:true,
 		timeUpdater: 
 		{
 			text: ">last update time: {docsify-updated}",
